--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
+            <classifier>indy</classifier>
         </dependency>
     </dependencies>
 
@@ -51,6 +52,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <invokeDynamic>true</invokeDynamic>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
